# fontspector

./: Cargo.toml  debug.html
fontspector-cli/: Cargo.toml
fontspector-cli/src/: profiles.rs
fontspector-py/: Cargo.toml
fontspector-py/src/: lib.rs
fontspector-web/: Cargo.toml
fontspector-web/src/: lib.rs
fontspector-web/www/: index.ts
profile-opentype/src/checks/opentype/: xavgcharwidth.rs
profile-typenetwork/: Cargo.toml
profile-typenetwork/src/: lib.rs
profile-typenetwork/src/checks/: mod.rs
profile-typenetwork/src/checks/typenetwork/: composite_glyphs.rs  mod.rs  valid_strikeout.rs  valid_underline.rs  weightclass.rs
profile-typenetwork/src/checks/typenetwork/family/: duplicated_names.rs  equal_numbers_of_glyphs.rs  mod.rs  tnum_horizontal_metrics.rs
profile-typenetwork/src/checks/typenetwork/name/: mandatory_entries.rs  mod.rs
profile-typenetwork/src/checks/typenetwork/varfont/: axes_have_variation.rs  fvar_axes_order.rs  mod.rs
