[package]
name = "fontspector-profile-typenetwork"
version = "1.0.0"
edition = "2021"
authors = ["Guido Ferreyra <guido@typenetwork.com>"]
description = "Fontspector checks for TypeNetwork font specification compliance"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector/"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
], version = "1.0.0" }
fontations = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }
